[package]
name = "nnv-rs"
version = "0.5.1"
edition = "2021"
description   = "Verification and Statistics on Deep Neural Networks"
readme        = "README.md"
repository    = "https://github.com/drkwint/nnv-rs"
license       = "MIT"
keywords      = ["ndarray", "statistics", "verification", "machine-learning", "deep-learning"]
categories    = ["algorithms", "simulation", "science"]
exclude = [
    ".github",
]

[features]
rayon = ["ndarray/rayon", "truncnorm/rayon", "good_lp/minilp"]
intel-mkl = ["ndarray-linalg/intel-mkl", "truncnorm/intel-mkl"]
openblas-system = ["ndarray/blas", "blas-src", "openblas-src", "ndarray-linalg/openblas-system", "truncnorm/openblas-system"]

[lib]
name = "nnv_rs"
crate-type = ["lib"]

[dependencies]
approx = "^0.4.0"
blas-src = { version = "0.8", features = ["openblas"], optional = true }
env_logger = "0.9.0"
good_lp = { version = "^1.2.0", features = ["coin_cbc"] }
itertools = "^0.10.1"
log = "^0.4"
ndarray = { version = "^0.15.2" }
ndarray-linalg = { version = "^0.14.0" }
ndarray-stats = "^0.5.0"
num = "^0.4.0"
openblas-src = { version = "0.10", features = ["cblas", "system"], optional = true }
rand = "^0.8.4"
truncnorm = "^0.4.0"
shh = "^1.0.1"
ordered-float = "^2.8.0"

[dev-dependencies]
ndarray-rand = "^0.14.0"
proptest = "1.0.0"
proptest-derive = "0.2.0"
criterion = { version = "0.3", features = ["html_reports"] }
pprof = { version = "0.5", features = ["flamegraph", "criterion" ] }

[[bench]]
name = "my_benchmark"
harness = false

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["run-for-all", "precommit-hook", "run-cargo-check", "run-cargo-fmt"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"