[package]
name = "nnv-rs"
version = "0.5.3"
edition = "2021"
description   = "Verification and Statistics on Deep Neural Networks"
readme        = "README.md"
repository    = "https://github.com/drkwint/nnv-rs"
license       = "MIT"
keywords      = ["ndarray", "statistics", "verification", "machine-learning", "deep-learning"]
categories    = ["algorithms", "simulation", "science"]
exclude = [
    ".github",
]

[features]
lp_coincbc = ["good_lp/coin_cbc"]
lp_gurobi = ["grb"]
rayon = ["ndarray/rayon", "truncnorm/rayon"]
intel-mkl = ["ndarray-linalg/intel-mkl", "truncnorm/intel-mkl"]
openblas-system = ["ndarray/blas", "blas-src", "openblas-src", "ndarray-linalg/openblas-system", "truncnorm/openblas-system"]

[lib]
name = "nnv_rs"
crate-type = ["lib"]

[dependencies]
approx = "^0.4.0"
blas-src = { version = "0.8", features = ["openblas"], optional = true }
cfg-if = "1.0.0"
env_logger = "0.9.0"
float-cmp = "0.9.0"
good_lp = { version = "^1.2.0", optional = true }
grb = { version = "1.3.0", optional = true }
itertools = "^0.10.1"
log = "^0.4"
ndarray = "^0.15.2"
ndarray-linalg = { version = "^0.14.0" }
ndarray-rand = "^0.14.0"
ndarray-stats = "^0.5.0"
num = "^0.4.0"
openblas-src = { version = "0.10", features = ["cblas", "system"], optional = true }
rand = "^0.8.4"
truncnorm = "^0.4.2"
shh = "^1.0.1"
ordered-float = "^2.8.0"

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.2.0"
criterion = { version = "0.3.5", features = ["html_reports"] }
pprof = { version = "0.5", features = ["flamegraph", "criterion" ] }

[[bench]]
name = "my_benchmark"
harness = false

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["run-for-all", "precommit-hook", "run-cargo-check", "run-cargo-fmt"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
